temporary fix for form overflow

--- a/src/styles/basic-form.css
+++ b/src/styles/basic-form.css
@@ -3,6 +3,12 @@ form {
   flex-direction: column;
 }
 
+:host {
+  display: block;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 input,
 select,
 textarea {
